--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Truculenta:opsz,wght@12..72,100..900&display=swap" rel="stylesheet">
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC97BYIwAOhDp_qqOCSnkkNJOABdK1T8lA"></script>
+  <script async src="https://maps.googleapis.com/maps/api/js?key=[API_KEY]"></script>
 
 </head>
 <body>
